--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,25 @@
 asgiref==3.7.2
     # via django
 django==5.0.3
+    # via
+    #   -r requirements.in
+    #   django-tenant-users
+    #   django-tenants
+    #   djangorestframework
+django-tenant-users==1.3.0
+    # via -r requirements.in
+django-tenants==3.6.1
+    # via
+    #   -r requirements.in
+    #   django-tenant-users
+djangorestframework==3.14.0
+    # via -r requirements.in
+psycopg2-binary==2.9.9
     # via -r requirements.in
 python-decouple==3.8
     # via -r requirements.in
+pytz==2024.1
+    # via djangorestframework
 sqlparse==0.4.4
     # via django
 typing-extensions==4.10.0
