--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django==5.0.3
     #   django-tenant-users
     #   django-tenants
     #   djangorestframework
+    #   djangorestframework-simplejwt
 django-tenant-users==1.3.0
     # via -r requirements.in
 django-tenants==3.6.1
@@ -19,9 +20,15 @@ django-tenants==3.6.1
     #   -r requirements.in
     #   django-tenant-users
 djangorestframework==3.14.0
+    # via
+    #   -r requirements.in
+    #   djangorestframework-simplejwt
+djangorestframework-simplejwt==5.3.1
     # via -r requirements.in
 psycopg2-binary==2.9.9
     # via -r requirements.in
+pyjwt==2.8.0
+    # via djangorestframework-simplejwt
 python-decouple==3.8
     # via -r requirements.in
 pytz==2024.1
