--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,10 @@ asgiref==3.7.2
     # via django
 async-timeout==4.0.3
     # via redis
+attrs==23.2.0
+    # via
+    #   jsonschema
+    #   referencing
 billiard==4.2.0
     # via celery
 celery[redis]==5.3.6
@@ -37,6 +41,7 @@ django==5.0.3
     #   django-tenants
     #   djangorestframework
     #   djangorestframework-simplejwt
+    #   drf-spectacular
 django-celery-results==2.5.1
     # via -r requirements.in
 django-filter==24.1
@@ -51,8 +56,17 @@ djangorestframework==3.14.0
     # via
     #   -r requirements.in
     #   djangorestframework-simplejwt
+    #   drf-spectacular
 djangorestframework-simplejwt==5.3.1
     # via -r requirements.in
+drf-spectacular==0.27.1
+    # via -r requirements.in
+inflection==0.5.1
+    # via drf-spectacular
+jsonschema==4.21.1
+    # via drf-spectacular
+jsonschema-specifications==2023.12.1
+    # via jsonschema
 kombu==5.3.5
     # via celery
 prompt-toolkit==3.0.43
@@ -67,8 +81,18 @@ python-decouple==3.8
     # via -r requirements.in
 pytz==2024.1
     # via djangorestframework
+pyyaml==6.0.1
+    # via drf-spectacular
 redis==5.0.3
     # via celery
+referencing==0.34.0
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
+rpds-py==0.18.0
+    # via
+    #   jsonschema
+    #   referencing
 six==1.16.0
     # via python-dateutil
 sqlparse==0.4.4
@@ -77,6 +101,8 @@ typing-extensions==4.10.0
     # via asgiref
 tzdata==2024.1
     # via celery
+uritemplate==4.1.1
+    # via drf-spectacular
 vine==5.1.0
     # via
     #   amqp
