--- a/compose.yaml
+++ b/compose.yaml
@@ -8,9 +8,10 @@ services:
     env_file:
       - ./.env
     environment:
-      - POSTGRES_NAME=${DB_NAME:?}
+      - POSTGRES_HOST=${DB_HOST:?}
       - POSTGRES_USER=${DB_USER:?}
       - POSTGRES_PASSWORD=${DB_PASSWORD:?}
+      - POSTGRES_NAME=${DB_NAME:?}
 
   drf:
     networks:
